@@ -308,6 +308,7 @@ fix special charecters issue in device name
 fix database reset when login was denied
 force login after device id reset
 fix multiple Emby server instances on reconnection to same server
+fix artist sync issue
 
 
 6.0.13 (beta)
